--- a/war/app/views/skateboards/count.html.erb
+++ b/war/app/views/skateboards/count.html.erb
@@ -4,4 +4,7 @@
 
 <p/>
 
-<%= link_to("View Inventory", url_for(:skateboards)) %>
+<%= link_to("View Inventory", skateboards_path) %>
+
+<p/>
+<%= link_to("Create a skateboard", new_skateboard_path) %>
