Revert "Junk add"
This reverts commit 8a99979b4898712943e909e97f33cdf8c3561f1e.

--- a/war/app/views/skateboards/count.html.erb
+++ b/war/app/views/skateboards/count.html.erb
@@ -4,7 +4,4 @@
 
 <p/>
 
-<%= link_to("View Inventory", skateboards_path) %>
-
-<p/>
-<%= link_to("Create a skateboard", new_skateboard_path) %>
+<%= link_to("View Inventory", url_for(:skateboards)) %>
